# whoopterm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  whoopterm-release
.github/: pull_request_template.md
.github/issue_templates/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
docs/: api.json
packaging/apt/: build.sh
packaging/homebrew/: whoop-cli.rb  whoopterm.rb
packaging/homebrew/whoopterm/: build.sh
packaging/homebrew/whoopterm/Formula/: whoopterm.rb
src/: api.rs  auth.rs  config.rs  data.rs  main.rs
