[package]
name = "whoopterm"
version = "1.0.0"
edition = "2021"
authors = ["idossha"]
description = "WHOOP fitness dashboard for the terminal"
license = "MIT"
repository = "https://github.com/idossha/whoopterm"
keywords = ["whoop", "fitness", "dashboard", "terminal", "tui"]
categories = ["command-line-utilities"]

[[bin]]
name = "whoop"
path = "src/main.rs"

[dependencies]
# TUI framework
ratatui = "0.24"
crossterm = "0.27"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# OAuth2
oauth2 = { version = "4.4", features = ["reqwest"] }

# Configuration
dirs = "5.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Colors and styling
ansi_term = "0.12"

[profile.release]
opt-level = 3
lto = true
strip = true
